// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RefugeDetailScreen Component Snapshot testing hauria de coincidir amb el snapshot amb favorit actiu 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "paddingTop": 0,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 24,
      }
    }
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "height": 320,
            "marginBottom": 16,
            "position": "relative",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            {
              "uri": "https://example.com/image.jpg",
            }
          }
          style={
            {
              "alignSelf": "stretch",
              "borderRadius": 12,
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 24,
                "fontWeight": "bold",
              }
            }
          >
            Refugi de Colomers
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#DBEAFE",
                    "borderColor": "#60A5FA",
                    "borderWidth": 1.25,
                  },
                  {
                    "marginRight": 8,
                  },
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#1E40AF",
                    },
                    undefined,
                  ]
                }
              >
                refuge.type.occupiedInSummer
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#A2FFC8",
                    "borderColor": "#30D270",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#007931",
                    },
                    undefined,
                  ]
                }
              >
                refuge.condition.label bé
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.altitude
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              2135m
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.capacity
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.occupation
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "marginTop": 4,
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 12,
                  },
                ]
              }
            >
              refuge.details.seeOccupation
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.description
        </Text>
        <View>
          <Text
            numberOfLines={4}
            style={
              {
                "color": "#51555eff",
                "fontSize": 14,
                "lineHeight": 22,
                "textAlign": "justify",
              }
            }
          >
            Un refugi preciós situat als Pirineus
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.localisation
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f9fafb",
              "borderRadius": 12,
              "flexDirection": "row",
              "gap": 12,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 12,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={16}
              width={16}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "flex": 1,
                  "fontSize": 12,
                }
              }
            >
              (42.6497, 0.94560)
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-gpx-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                GPX
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-kml-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                KML
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.prepareRoute
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="weather-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "transform": [
                    {
                      "scaleX": -1,
                    },
                  ],
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.weather
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="routes-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.nearbyRoutes
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "position": "absolute",
          "right": 16,
          "zIndex": 2000,
        },
        {
          "top": 16,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        color="#FF6900"
        height={20}
        width={20}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="edit-button"
    >
      <test-file-stub
        color="#4A5565"
        height={18}
        width={18}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 8,
        "elevation": 4,
        "height": 40,
        "justifyContent": "center",
        "left": 16,
        "opacity": 1,
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "top": 16,
        "width": 40,
        "zIndex": 1000,
      }
    }
    testID="back-button"
  >
    <test-file-stub
      color="#4A5565"
      height={20}
      width={20}
    />
  </View>
  <View
    style={
      {
        "paddingBottom": 0,
      }
    }
  />
</View>
`;

exports[`RefugeDetailScreen Component Snapshot testing hauria de coincidir amb el snapshot amb totes les dades 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "paddingTop": 0,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 24,
      }
    }
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "height": 320,
            "marginBottom": 16,
            "position": "relative",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            {
              "uri": "https://example.com/image.jpg",
            }
          }
          style={
            {
              "alignSelf": "stretch",
              "borderRadius": 12,
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 24,
                "fontWeight": "bold",
              }
            }
          >
            Refugi de Colomers
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#DBEAFE",
                    "borderColor": "#60A5FA",
                    "borderWidth": 1.25,
                  },
                  {
                    "marginRight": 8,
                  },
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#1E40AF",
                    },
                    undefined,
                  ]
                }
              >
                refuge.type.occupiedInSummer
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "borderRadius": 8,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "paddingHorizontal": 8,
                    "paddingVertical": 2,
                  },
                  {
                    "backgroundColor": "#A2FFC8",
                    "borderColor": "#30D270",
                    "borderWidth": 1.25,
                  },
                  undefined,
                ]
              }
              testID="badge-container"
            >
              <Text
                style={
                  [
                    {
                      "fontFamily": "Arimo",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#007931",
                    },
                    undefined,
                  ]
                }
              >
                refuge.condition.label bé
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.altitude
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              2135m
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.capacity
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              50
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.occupation
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "marginTop": 4,
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 12,
                  },
                ]
              }
            >
              refuge.details.seeOccupation
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.description
        </Text>
        <View>
          <Text
            numberOfLines={4}
            style={
              {
                "color": "#51555eff",
                "fontSize": 14,
                "lineHeight": 22,
                "textAlign": "justify",
              }
            }
          >
            Un refugi preciós situat als Pirineus
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.localisation
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f9fafb",
              "borderRadius": 12,
              "flexDirection": "row",
              "gap": 12,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 12,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={16}
              width={16}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "flex": 1,
                  "fontSize": 12,
                }
              }
            >
              (42.6497, 0.94560)
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-gpx-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                GPX
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-kml-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                KML
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.prepareRoute
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="weather-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "transform": [
                    {
                      "scaleX": -1,
                    },
                  ],
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.weather
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="routes-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.nearbyRoutes
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "position": "absolute",
          "right": 16,
          "zIndex": 2000,
        },
        {
          "top": 16,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        color="#4A5565"
        fill="none"
        height={20}
        width={20}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="edit-button"
    >
      <test-file-stub
        color="#4A5565"
        height={18}
        width={18}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 8,
        "elevation": 4,
        "height": 40,
        "justifyContent": "center",
        "left": 16,
        "opacity": 1,
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "top": 16,
        "width": 40,
        "zIndex": 1000,
      }
    }
    testID="back-button"
  >
    <test-file-stub
      color="#4A5565"
      height={20}
      width={20}
    />
  </View>
  <View
    style={
      {
        "paddingBottom": 0,
      }
    }
  />
</View>
`;

exports[`RefugeDetailScreen Component Snapshot testing hauria de coincidir amb el snapshot sense dades opcionals 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "white",
        "flex": 1,
      },
      {
        "paddingTop": 0,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingHorizontal": 16,
        "paddingVertical": 24,
      }
    }
    showsVerticalScrollIndicator={true}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          {
            "height": 320,
            "marginBottom": 16,
            "position": "relative",
          }
        }
      >
        <Image
          resizeMode="cover"
          source={
            {
              "uri": "https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800",
            }
          }
          style={
            {
              "alignSelf": "stretch",
              "borderRadius": 12,
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 16,
            }
          }
        >
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 24,
                "fontWeight": "bold",
              }
            }
          >
            Refugi Mínim
          </Text>
          <View
            style={
              {
                "flexDirection": "row",
                "flexWrap": "wrap",
              }
            }
          />
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.altitude
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              N/A
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.capacity
            </Text>
            <Text
              style={
                {
                  "color": "#111827",
                  "fontSize": 14,
                  "fontWeight": "600",
                  "marginTop": 4,
                  "textAlign": "center",
                }
              }
            >
              N/A
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={24}
              width={24}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                  "marginTop": 8,
                }
              }
            >
              refuge.details.occupation
            </Text>
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "marginTop": 4,
                    "textAlign": "center",
                  },
                  {
                    "fontSize": 12,
                  },
                ]
              }
            >
              refuge.details.seeOccupation
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.description
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.localisation
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f9fafb",
              "borderRadius": 12,
              "flexDirection": "row",
              "gap": 12,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 12,
              }
            }
          >
            <test-file-stub
              color="#FF6900"
              height={16}
              width={16}
            />
            <Text
              style={
                {
                  "color": "#6b7280",
                  "flex": 1,
                  "fontSize": 12,
                }
              }
            >
              (42.0000, 1.00000)
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-gpx-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                GPX
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 6,
                  "flexDirection": "row",
                  "gap": 4,
                  "opacity": 1,
                  "paddingHorizontal": 8,
                  "paddingVertical": 6,
                }
              }
              testID="download-kml-button"
            >
              <test-file-stub
                color="#4A5565"
                height={14}
                width={14}
              />
              <Text
                style={
                  {
                    "color": "#4A5565",
                    "fontSize": 12,
                    "fontWeight": "500",
                  }
                }
              >
                KML
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "marginBottom": 24,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
              "marginBottom": 12,
            }
          }
        >
          refuge.details.prepareRoute
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 16,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="weather-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "transform": [
                    {
                      "scaleX": -1,
                    },
                  ],
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.weather
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9fafb",
                "borderRadius": 12,
                "flex": 1,
                "justifyContent": "center",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="routes-button"
          >
            <Image
              source="test-file-stub"
              style={
                {
                  "height": 48,
                  "width": 48,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#000000ff",
                  "fontFamily": "Arimo",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "marginTop": 8,
                }
              }
            >
              refuge.details.nearbyRoutes
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "height": 100,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "position": "absolute",
          "right": 16,
          "zIndex": 2000,
        },
        {
          "top": 16,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="favorite-button"
    >
      <test-file-stub
        color="#4A5565"
        fill="none"
        height={20}
        width={20}
      />
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderRadius": 8,
          "elevation": 4,
          "height": 40,
          "justifyContent": "center",
          "marginLeft": 8,
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 8,
          "width": 40,
        }
      }
      testID="edit-button"
    >
      <test-file-stub
        color="#4A5565"
        height={18}
        width={18}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderRadius": 8,
        "elevation": 4,
        "height": 40,
        "justifyContent": "center",
        "left": 16,
        "opacity": 1,
        "position": "absolute",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 8,
        "top": 16,
        "width": 40,
        "zIndex": 1000,
      }
    }
    testID="back-button"
  >
    <test-file-stub
      color="#4A5565"
      height={20}
      width={20}
    />
  </View>
  <View
    style={
      {
        "paddingBottom": 0,
      }
    }
  />
</View>
`;
